Modifying damadics data handler
The data handler can now take dates at the creation of the object. No date need to be provided at the data load.

--- a/data_handlers/Test_DataHandlers.ipynb
+++ b/data_handlers/Test_DataHandlers.ipynb
@@ -139,7 +139,6 @@
    ],
    "source": [
     "start_date = datetime.datetime(2018, 2, 14, 18, 59, 20)\n",
-    "date2 = datetime.datetime(2018, 2, 14, 18, 59, 20)\n",
     "time_delta = datetime.timedelta(days=0, seconds=0, microseconds=0, milliseconds=0, minutes=1, hours=0, weeks=0)\n",
     "end_date = start_date + 1001*time_delta #get the first 300 instances\n",
     "\n",
@@ -155,7 +154,8 @@
     "window_size = 1\n",
     "window_stride = 1\n",
     "\n",
-    "dHandlder_valve = DamadicsDataHandler(selected_features, window_size, window_stride)\n",
+    "dHandlder_valve = DamadicsDataHandler(selected_features, window_size, window_stride, \n",
+    "                                      start_date=start_date, end_date=end_date)\n",
     "dHandlder_valve.connect_to_db('readOnly', '_readOnly2019', '169.236.181.40', 'damadics')"
    ]
   },
@@ -168,57 +168,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Reload from DB\n",
       "Loading data for DAMADICS with window_size of 1, stride of 1. Cros-Validation ratio 0\n",
       "Loading data from database\n",
-      "Extracting data from database runtime: 0:00:00.265040\n",
-      "Retrieved runs\n",
-      "3\n",
-      "[0, 256, 696]\n",
-      "Available runs\n",
-      "2\n",
-      "[(0, 216, 256), (256, 652, 696)]\n",
-      "split ratio 0.100000:\n",
-      "num_sample 2:\n",
-      "num_split_test 1:\n",
-      "num_split_test 1:\n",
-      "data splitting: 0:00:00.000495\n",
-      "Printing shapes\n",
-      "\n",
-      "Training data (X, y)\n",
-      "(256, 6)\n",
-      "(256, 1)\n",
-      "Testing data (X, y)\n",
-      "(10, 6)\n",
-      "(10, 1)\n",
-      "Printing first 5 elements\n",
-      "\n",
-      "Training data (X, y)\n",
-      "[[0.366043 0.851547 0.649668 0.215567 0.383757 1.      ]\n",
-      " [0.659356 0.848289 0.646597 0.215185 0.677321 0.290582]\n",
-      " [0.366043 0.849878 0.643544 0.213564 0.374558 1.      ]\n",
-      " [0.484302 0.849316 0.647047 0.216367 0.46532  0.828368]\n",
-      " [0.659356 0.848122 0.6398   0.215419 0.679053 0.288377]]\n",
-      "[[ 8.]\n",
-      " [20.]\n",
-      " [20.]\n",
-      " [20.]\n",
-      " [ 8.]]\n",
-      "Testing data (X, y)\n",
-      "[[0.484302 0.847412 0.646711 0.214055 0.465985 0.830088]\n",
-      " [0.484302 0.846766 0.643403 0.213364 0.499448 0.704205]\n",
-      " [0.484302 0.849943 0.652389 0.215808 0.467047 0.816181]\n",
-      " [0.366043 0.849611 0.654383 0.215053 0.414999 0.998517]\n",
-      " [0.659356 0.849639 0.644843 0.21505  0.685794 0.280388]]\n",
-      "[[20.]\n",
-      " [ 1.]\n",
-      " [20.]\n",
-      " [20.]\n",
-      " [20.]]\n"
+      "None\n",
+      "None\n",
+      "[]\n",
+      "Extracting data from database runtime: 0:00:00.098202\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 0 is out of bounds for axis 0 with size 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-999935f43912>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdHandlder_valve\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munroll\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdHandlder_valve\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprint_top\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#One hot encoding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#cat = np.arange(1,5)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/University_of_California/Research/Projects/ann_framework/data_handlers/data_handler_DAMADICS.py\u001b[0m in \u001b[0;36mload_data\u001b[0;34m(self, unroll, cross_validation_ratio, verbose, **kwargs)\u001b[0m\n\u001b[1;32m    227\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    228\u001b[0m                         \u001b[0;31m# Find the number of samples obtained from the timeframe (a sample is defined as a run to failure cycle)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 229\u001b[0;31m                         \u001b[0mstart_indices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfault_indices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdiscarded_top_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdiscarded_bottom_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mretrieve_samples\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    230\u001b[0m                         \u001b[0mindices_shifted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstart_indices\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    231\u001b[0m                         \u001b[0mfault_indices\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/University_of_California/Research/Projects/ann_framework/data_handlers/data_handler_DAMADICS.py\u001b[0m in \u001b[0;36mretrieve_samples\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    141\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    142\u001b[0m                 \u001b[0;31m#Find the first non-faulty state of the valve and start from there\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 143\u001b[0;31m                 \u001b[0mcurr_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_y\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    144\u001b[0m                 \u001b[0;32mwhile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurr_state\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m20\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mnum_instances\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    145\u001b[0m                         \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 0 is out of bounds for axis 0 with size 0"
      ]
     }
    ],
    "source": [
-    "dHandlder_valve.load_data(unroll=True, verbose=1, start_date=start_date, end_date=end_date)\n",
+    "dHandlder_valve.load_data(unroll=True, verbose=1)\n",
     "dHandlder_valve.print_data(print_top=True)\n",
     "\n",
     "#One hot encoding\n",
