Adding support for cross validation to damadics data handler
Adding support for cross-validation

--- a/data_handlers/Test_DataHandlers.ipynb
+++ b/data_handlers/Test_DataHandlers.ipynb
@@ -168,31 +168,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reload from DB\n",
-      "Loading data for DAMADICS with window_size of 1, stride of 1. Cros-Validation ratio 0\n",
+      "Loading data for DAMADICS with window_size of 1, stride of 1. Cros-Validation ratio 0.2\n",
       "Loading data from database\n",
-      "None\n",
-      "None\n",
+      "Extracting data from database runtime: 0:00:00.147563\n",
+      "0.2\n",
+      "splitting for cv\n",
+      "split ratio 0.200000:\n",
+      "num_sample 2:\n",
+      "num_split_test 1:\n",
+      "num_split_test 1:\n",
+      "data splitting: 0:00:00.000137\n",
+      "train indices\n",
+      "[(0, 216, 256)]\n",
+      "test indices\n",
       "[]\n",
-      "Extracting data from database runtime: 0:00:00.098202\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index 0 is out of bounds for axis 0 with size 0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-999935f43912>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdHandlder_valve\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munroll\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdHandlder_valve\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprint_top\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#One hot encoding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#cat = np.arange(1,5)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/University_of_California/Research/Projects/ann_framework/data_handlers/data_handler_DAMADICS.py\u001b[0m in \u001b[0;36mload_data\u001b[0;34m(self, unroll, cross_validation_ratio, verbose, **kwargs)\u001b[0m\n\u001b[1;32m    227\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    228\u001b[0m                         \u001b[0;31m# Find the number of samples obtained from the timeframe (a sample is defined as a run to failure cycle)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 229\u001b[0;31m                         \u001b[0mstart_indices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfault_indices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdiscarded_top_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdiscarded_bottom_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mretrieve_samples\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    230\u001b[0m                         \u001b[0mindices_shifted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstart_indices\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    231\u001b[0m                         \u001b[0mfault_indices\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/University_of_California/Research/Projects/ann_framework/data_handlers/data_handler_DAMADICS.py\u001b[0m in \u001b[0;36mretrieve_samples\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    141\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    142\u001b[0m                 \u001b[0;31m#Find the first non-faulty state of the valve and start from there\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 143\u001b[0;31m                 \u001b[0mcurr_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_y\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    144\u001b[0m                 \u001b[0;32mwhile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurr_state\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m20\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mnum_instances\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    145\u001b[0m                         \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 0 is out of bounds for axis 0 with size 0"
+      "cv indices\n",
+      "[(256, 652, 696)]\n",
+      "generating crossval data\n",
+      "Printing shapes\n",
+      "\n",
+      "Training data (X, y)\n",
+      "(256, 6)\n",
+      "(256, 1)\n",
+      "Cross-Validation data (X, y)\n",
+      "(10, 6)\n",
+      "(10, 1)\n",
+      "No test data is available\n",
+      "Printing first 5 elements\n",
+      "\n",
+      "Training data (X, y)\n",
+      "[[0.659356 0.849687 0.649005 0.212611 0.676273 0.284699]\n",
+      " [0.366043 0.848788 0.653435 0.214045 0.37925  1.      ]\n",
+      " [0.257854 0.848397 0.6498   0.215623 0.23931  1.      ]\n",
+      " [0.484302 0.849198 0.655532 0.215053 0.467528 0.80501 ]\n",
+      " [0.484302 0.848435 0.652822 0.212957 0.466926 0.810632]]\n",
+      "[[20.]\n",
+      " [20.]\n",
+      " [20.]\n",
+      " [20.]\n",
+      " [20.]]\n",
+      "Cross-Validation data (X, y)\n",
+      "[[0.732444 0.850497 0.650036 0.215177 0.732545 0.216524]\n",
+      " [0.732444 0.848021 0.651471 0.215538 0.498801 0.691003]\n",
+      " [0.257854 0.849912 0.652922 0.215984 0.242616 0.998312]\n",
+      " [0.366043 0.850849 0.652545 0.215766 0.395071 1.      ]\n",
+      " [0.484302 0.847553 0.644224 0.215589 0.46319  0.831311]]\n",
+      "[[20.]\n",
+      " [ 1.]\n",
+      " [20.]\n",
+      " [20.]\n",
+      " [20.]]\n",
+      "No test data is available\n"
      ]
     }
    ],
    "source": [
-    "dHandlder_valve.load_data(unroll=True, verbose=1)\n",
+    "dHandlder_valve.load_data(unroll=True, verbose=1, cross_validation_ratio=0.2)\n",
     "dHandlder_valve.print_data(print_top=True)\n",
     "\n",
     "#One hot encoding\n",
