Minor changes to sequenced data handlers
Sequenced data handler can now hold multiclass labels.

CMAPSS data handler changed to comply with new implementation of sequenced data handler

Added support to Damadics data handler for one hot encoding and binary classes.

Performed unit tests

--- a/data_handlers/Test_DataHandlers.ipynb
+++ b/data_handlers/Test_DataHandlers.ipynb
@@ -155,7 +155,8 @@
     "window_stride = 1\n",
     "\n",
     "dHandlder_valve = DamadicsDataHandler(selected_features, window_size, window_stride, \n",
-    "                                      start_date=start_date, end_date=end_date)\n",
+    "                                      start_date=start_date, end_date=end_date, \n",
+    "                                      binary_classes=True, one_hot_encode=True)\n",
     "dHandlder_valve.connect_to_db('readOnly', '_readOnly2019', '169.236.181.40', 'damadics')"
    ]
   },
@@ -170,54 +171,41 @@
      "text": [
       "Loading data for DAMADICS with window_size of 1, stride of 1. Cros-Validation ratio 0.2\n",
       "Loading data from database\n",
-      "Extracting data from database runtime: 0:00:00.147563\n",
-      "0.2\n",
-      "splitting for cv\n",
-      "split ratio 0.200000:\n",
-      "num_sample 2:\n",
-      "num_split_test 1:\n",
-      "num_split_test 1:\n",
-      "data splitting: 0:00:00.000137\n",
-      "train indices\n",
-      "[(0, 216, 256)]\n",
-      "test indices\n",
-      "[]\n",
-      "cv indices\n",
-      "[(256, 652, 696)]\n",
-      "generating crossval data\n",
+      "Extracting data from database runtime: 0:00:00.705089\n",
+      "Data Splitting: 0:00:00.000154\n",
       "Printing shapes\n",
       "\n",
       "Training data (X, y)\n",
-      "(256, 6)\n",
-      "(256, 1)\n",
+      "(440, 6)\n",
+      "(440, 2)\n",
       "Cross-Validation data (X, y)\n",
       "(10, 6)\n",
-      "(10, 1)\n",
+      "(10, 2)\n",
       "No test data is available\n",
       "Printing first 5 elements\n",
       "\n",
       "Training data (X, y)\n",
-      "[[0.659356 0.849687 0.649005 0.212611 0.676273 0.284699]\n",
-      " [0.366043 0.848788 0.653435 0.214045 0.37925  1.      ]\n",
-      " [0.257854 0.848397 0.6498   0.215623 0.23931  1.      ]\n",
-      " [0.484302 0.849198 0.655532 0.215053 0.467528 0.80501 ]\n",
-      " [0.484302 0.848435 0.652822 0.212957 0.466926 0.810632]]\n",
-      "[[20.]\n",
-      " [20.]\n",
-      " [20.]\n",
-      " [20.]\n",
-      " [20.]]\n",
+      "[[0.484302 0.848098 0.643763 0.213603 0.469482 0.826467]\n",
+      " [0.732444 0.847899 0.64894  0.215221 0.731403 0.219411]\n",
+      " [0.484302 0.848536 0.642956 0.215    0.468653 0.82989 ]\n",
+      " [0.484302 0.846766 0.643403 0.213364 0.499448 0.704205]\n",
+      " [0.484302 0.848896 0.653864 0.213234 0.466801 0.807106]]\n",
+      "[[1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [0. 1.]\n",
+      " [1. 0.]]\n",
       "Cross-Validation data (X, y)\n",
-      "[[0.732444 0.850497 0.650036 0.215177 0.732545 0.216524]\n",
-      " [0.732444 0.848021 0.651471 0.215538 0.498801 0.691003]\n",
-      " [0.257854 0.849912 0.652922 0.215984 0.242616 0.998312]\n",
-      " [0.366043 0.850849 0.652545 0.215766 0.395071 1.      ]\n",
-      " [0.484302 0.847553 0.644224 0.215589 0.46319  0.831311]]\n",
-      "[[20.]\n",
-      " [ 1.]\n",
-      " [20.]\n",
-      " [20.]\n",
-      " [20.]]\n",
+      "[[0.484302 0.84623  0.642551 0.212128 0.467262 0.824654]\n",
+      " [0.484302 0.850253 0.656247 0.213609 0.46937  0.807902]\n",
+      " [0.484302 0.847955 0.655295 0.215859 0.467309 0.805628]\n",
+      " [0.732444 0.848521 0.646906 0.213569 0.728205 0.22068 ]\n",
+      " [0.484302 0.850761 0.646785 0.217445 0.46666  0.829985]]\n",
+      "[[1. 0.]\n",
+      " [1. 0.]\n",
+      " [0. 1.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]]\n",
       "No test data is available\n"
      ]
     }
