--- a/data_handlers/Test_DataHandlers.ipynb
+++ b/data_handlers/Test_DataHandlers.ipynb
@@ -29,8 +29,8 @@
     "import numpy as np\n",
     "import random\n",
     "\n",
-    "sys.path.append('/Users/davidlaredorazo/Documents/University_of_California/Research/Projects')\n",
-    "#sys.path.append('/media/controlslab/DATA/Projects')\n",
+    "#sys.path.append('/Users/davidlaredorazo/Documents/University_of_California/Research/Projects')\n",
+    "sys.path.append('/media/controlslab/DATA/Projects')\n",
     "\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,8 @@
     }
    ],
    "source": [
-    "start_date = datetime.datetime(2018, 2, 14, 18, 59, 20)\n",
+    "#start_date = datetime.datetime(2018, 2, 14, 18, 59, 20)\n",
+    "start_date = datetime.datetime(2019, 6, 14, 0, 43, 50)\n",
     "time_delta = datetime.timedelta(days=0, seconds=0, microseconds=0, milliseconds=0, minutes=1, hours=0, weeks=0)\n",
     "end_date = start_date + 1001*time_delta #get the first 300 instances\n",
     "\n",
@@ -156,13 +157,13 @@
     "\n",
     "dHandlder_valve = DamadicsDataHandler(selected_features, window_size, window_stride, \n",
     "                                      start_date=start_date, end_date=end_date, \n",
-    "                                      binary_classes=True, one_hot_encode=True)\n",
+    "                                      binary_classes=True, one_hot_encode=True, test_data_only=False)\n",
     "dHandlder_valve.connect_to_db('readOnly', '_readOnly2019', '169.236.181.40', 'damadics')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -171,42 +172,21 @@
      "text": [
       "Loading data for DAMADICS with window_size of 1, stride of 1. Cros-Validation ratio 0.2\n",
       "Loading data from database\n",
-      "Extracting data from database runtime: 0:00:00.705089\n",
-      "Data Splitting: 0:00:00.000154\n",
-      "Printing shapes\n",
-      "\n",
-      "Training data (X, y)\n",
-      "(440, 6)\n",
-      "(440, 2)\n",
-      "Cross-Validation data (X, y)\n",
-      "(10, 6)\n",
-      "(10, 2)\n",
-      "No test data is available\n",
-      "Printing first 5 elements\n",
-      "\n",
-      "Training data (X, y)\n",
-      "[[0.484302 0.848098 0.643763 0.213603 0.469482 0.826467]\n",
-      " [0.732444 0.847899 0.64894  0.215221 0.731403 0.219411]\n",
-      " [0.484302 0.848536 0.642956 0.215    0.468653 0.82989 ]\n",
-      " [0.484302 0.846766 0.643403 0.213364 0.499448 0.704205]\n",
-      " [0.484302 0.848896 0.653864 0.213234 0.466801 0.807106]]\n",
-      "[[1. 0.]\n",
-      " [1. 0.]\n",
-      " [1. 0.]\n",
-      " [0. 1.]\n",
-      " [1. 0.]]\n",
-      "Cross-Validation data (X, y)\n",
-      "[[0.484302 0.84623  0.642551 0.212128 0.467262 0.824654]\n",
-      " [0.484302 0.850253 0.656247 0.213609 0.46937  0.807902]\n",
-      " [0.484302 0.847955 0.655295 0.215859 0.467309 0.805628]\n",
-      " [0.732444 0.848521 0.646906 0.213569 0.728205 0.22068 ]\n",
-      " [0.484302 0.850761 0.646785 0.217445 0.46666  0.829985]]\n",
-      "[[1. 0.]\n",
-      " [1. 0.]\n",
-      " [0. 1.]\n",
-      " [1. 0.]\n",
-      " [1. 0.]]\n",
-      "No test data is available\n"
+      "Reading data from ValveReading\n",
+      "Extracting data from database runtime: 0:00:00.051982\n",
+      "Error: one of the two splits is left with 0 samples\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-89a2f77e79de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdHandlder_valve\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munroll\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcross_validation_ratio\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdHandlder_valve\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprint_top\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#One hot encoding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#cat = np.arange(1,5)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/media/controlslab/DATA/Projects/ann_framework/data_handlers/data_handler_DAMADICS.py\u001b[0m in \u001b[0;36mload_data\u001b[0;34m(self, unroll, cross_validation_ratio, verbose, **kwargs)\u001b[0m\n\u001b[1;32m    301\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    302\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mcross_validation_ratio\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 303\u001b[0;31m                         \u001b[0mtrain_indices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv_indices\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit_samples\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_indices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcross_validation_ratio\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_num_samples\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    304\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    305\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
      ]
     }
    ],
