test data handlers with the new damadics data handler

--- a/data_handlers/Test_DataHandlers.ipynb
+++ b/data_handlers/Test_DataHandlers.ipynb
@@ -138,10 +138,10 @@
     }
    ],
    "source": [
-    "#start_date = datetime.datetime(2018, 2, 14, 18, 59, 20)\n",
-    "start_date = datetime.datetime(2019, 6, 14, 0, 43, 50)\n",
+    "start_date = datetime.datetime(2018, 2, 14, 18, 59, 20) # ValveReadingsTest, trainning\n",
+    "#start_date = datetime.datetime(2019, 6, 14, 17, 6, 41) # ValveReadings, testing\n",
     "time_delta = datetime.timedelta(days=0, seconds=0, microseconds=0, milliseconds=0, minutes=1, hours=0, weeks=0)\n",
-    "end_date = start_date + 1001*time_delta #get the first 300 instances\n",
+    "end_date = start_date + 20001*time_delta #get the first 300 instances\n",
     "\n",
     "features = ['externalControllerOutput', 'undisturbedMediumFlow', 'pressureValveInlet', \n",
     "            'pressureValveOutlet', 'mediumTemperature', 'rodDisplacement', 'disturbedMediumFlow', \n",
@@ -172,26 +172,48 @@
      "text": [
       "Loading data for DAMADICS with window_size of 1, stride of 1. Cros-Validation ratio 0.2\n",
       "Loading data from database\n",
-      "Reading data from ValveReading\n",
-      "Extracting data from database runtime: 0:00:00.051982\n",
-      "Error: one of the two splits is left with 0 samples\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-89a2f77e79de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdHandlder_valve\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munroll\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcross_validation_ratio\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdHandlder_valve\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprint_top\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#One hot encoding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#cat = np.arange(1,5)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/media/controlslab/DATA/Projects/ann_framework/data_handlers/data_handler_DAMADICS.py\u001b[0m in \u001b[0;36mload_data\u001b[0;34m(self, unroll, cross_validation_ratio, verbose, **kwargs)\u001b[0m\n\u001b[1;32m    301\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    302\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mcross_validation_ratio\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 303\u001b[0;31m                         \u001b[0mtrain_indices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv_indices\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit_samples\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_indices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcross_validation_ratio\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_num_samples\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    304\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    305\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+      "Reading data from ValveReadingTest\n",
+      "Extracting data from database runtime: 0:00:00.183896\n",
+      "Data Splitting: 0:00:00.000023\n",
+      "Printing shapes\n",
+      "\n",
+      "Training data (X, y)\n",
+      "(6468, 6)\n",
+      "(6468, 2)\n",
+      "Cross-Validation data (X, y)\n",
+      "(20, 6)\n",
+      "(20, 2)\n",
+      "No test data is available\n",
+      "Printing first 5 elements\n",
+      "\n",
+      "Training data (X, y)\n",
+      "[[0.257854 0.848304 0.651139 0.215251 0.497586 0.698251]\n",
+      " [0.366043 0.847326 0.645708 0.216    0.647302 0.330563]\n",
+      " [0.257854 0.849484 0.645207 0.216297 0.472669 0.80157 ]\n",
+      " [0.659356 0.849365 0.652557 0.214993 0.812263 0.154435]\n",
+      " [0.257854 0.848645 0.647337 0.213231 0.473394 0.793752]]\n",
+      "[[1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [0. 1.]\n",
+      " [1. 0.]]\n",
+      "Cross-Validation data (X, y)\n",
+      "[[0.659356 0.848244 0.655006 0.215228 0.821411 0.137224]\n",
+      " [0.257854 0.848291 0.644497 0.214438 0.241916 1.      ]\n",
+      " [0.257854 0.849017 0.655787 0.215109 0.237148 1.      ]\n",
+      " [0.659356 0.848663 0.644061 0.21346  0.715476 0.24065 ]\n",
+      " [0.659356 0.851281 0.647941 0.214982 0.784031 0.168239]]\n",
+      "[[0. 1.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]]\n",
+      "No test data is available\n"
      ]
     }
    ],
    "source": [
-    "dHandlder_valve.load_data(unroll=True, verbose=1, cross_validation_ratio=0.2)\n",
+    "dHandlder_valve.load_data(unroll=True, verbose=1, cross_validation_ratio=0.2, test_ratio = 0)\n",
     "dHandlder_valve.print_data(print_top=True)\n",
     "\n",
     "#One hot encoding\n",
@@ -247,11 +269,18 @@
     "\n",
     "data_file = '../../NIHdata/data/Data_Entry_2017.csv'\n",
     "data_folder = '../../NIHdata/data/'\n",
-    "dHandler_NIH = NIHDataHandler(data_file, data_folder, multi_labels=False)\n",
+    "dHandler_NIH = NIHDataHandler(data_file, data_folder, multi_labels=True)\n",
     "dHandler_NIH.load_data(verbose = 0, cross_validation_ratio = 0.20, prune_threshold=1000, number_samples=5000)\n",
-    "# dHandler_NIH.print_data()\n",
+    "dHandler_NIH.print_data()\n",
     "#dHandler_NIH.show_img()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
