--- a/data_handlers/Test_DataHandlers.ipynb
+++ b/data_handlers/Test_DataHandlers.ipynb
@@ -29,8 +29,8 @@
     "import numpy as np\n",
     "import random\n",
     "\n",
-    "#sys.path.append('/Users/davidlaredorazo/Documents/University_of_California/Research/Projects')\n",
-    "sys.path.append('/media/controlslab/DATA/Projects')\n",
+    "sys.path.append('/Users/davidlaredorazo/Documents/University_of_California/Research/Projects')\n",
+    "#sys.path.append('/media/controlslab/DATA/Projects')\n",
     "\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
@@ -126,94 +126,300 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2019-06-14 17:06:41\n",
+      "2019-06-21 12:26:41\n",
+      "['externalControllerOutput', 'pressureValveInlet', 'pressureValveOutlet', 'mediumTemperature', 'rodDisplacement', 'disturbedMediumFlow']\n",
       "Connection to mysql+mysqldb://readOnly:_readOnly2019@169.236.181.40/damadics successfull\n"
      ]
     }
    ],
    "source": [
-    "start_date = datetime.datetime(2018, 2, 14, 18, 59, 20) # ValveReadingsTest, trainning\n",
-    "#start_date = datetime.datetime(2019, 6, 14, 17, 6, 41) # ValveReadings, testing\n",
+    "start_date_test = datetime.datetime(2018, 2, 14, 18, 59, 20) # ValveReadingsTest, testing\n",
+    "start_date_training = datetime.datetime(2019, 6, 14, 17, 6, 41) # ValveReadings, trainning\n",
     "time_delta = datetime.timedelta(days=0, seconds=0, microseconds=0, milliseconds=0, minutes=1, hours=0, weeks=0)\n",
-    "end_date = start_date + 20001*time_delta #get the first 300 instances\n",
+    "\n",
+    "n = 9800\n",
+    "\n",
+    "end_date_training = start_date_training + n*time_delta #get the first n instances\n",
+    "end_date_test = start_date_test + n*time_delta #get the first n instances\n",
+    "\n",
+    "print(start_date_training)\n",
+    "print(end_date_training)\n",
     "\n",
     "features = ['externalControllerOutput', 'undisturbedMediumFlow', 'pressureValveInlet', \n",
     "            'pressureValveOutlet', 'mediumTemperature', 'rodDisplacement', 'disturbedMediumFlow', \n",
     "           'selectedFault', 'faultType', 'faultIntensity']\n",
     "\n",
-    "selected_indices = np.array([1,2,3,4,5,6])\n",
+    "selected_indices = np.array([1,3,4,5,6,7])\n",
     "selected_features = list(features[i] for i in selected_indices-1)\n",
+    "print(selected_features)\n",
     "\n",
     "#Does not work for sequence sizes larger than 1 given the way I'm generating the test data. \n",
     "#Need to properly define what the test data is going to be like.\n",
     "window_size = 1\n",
     "window_stride = 1\n",
     "\n",
-    "dHandlder_valve = DamadicsDataHandler(selected_features, window_size, window_stride, \n",
-    "                                      start_date=start_date, end_date=end_date, \n",
-    "                                      binary_classes=True, one_hot_encode=True, test_data_only=False)\n",
+    "dHandlder_valve = DamadicsDataHandler(selected_features, window_size, window_stride,\n",
+    "                                      start_date_training=start_date_training, end_date_training=end_date_training,\n",
+    "                                      start_date_test=start_date_test, end_date_test=end_date_test,\n",
+    "                                      binary_classes=True, one_hot_encode=True, samples_per_run=10)\n",
     "dHandlder_valve.connect_to_db('readOnly', '_readOnly2019', '169.236.181.40', 'damadics')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading data for DAMADICS with window_size of 1, stride of 1. Cros-Validation ratio 0.2\n",
+      "Loading training data for DAMADICS with window_size of 1, stride of 1. Cros-Validation ratio 0.1\n",
+      "Loading data from database\n",
+      "Reading data from ValveReading\n",
+      "2019-06-14 17:06:41\n",
+      "2019-06-21 12:26:41\n",
+      "Extracting data from database runtime: 0:00:00.242338\n",
+      "Data Splitting: 0:00:00.000026\n",
+      "Loading test data for DAMADICS with window_size of 1, stride of 1\n",
       "Loading data from database\n",
       "Reading data from ValveReadingTest\n",
-      "Extracting data from database runtime: 0:00:00.183896\n",
-      "Data Splitting: 0:00:00.000023\n",
+      "Extracting data from database runtime: 0:00:00.155287\n",
+      "[(7316, 7357), (3948, 7316), (7357, 9621), (3907, 3948)]\n",
+      "[(0, 3907)]\n",
+      "[(0, 216), (216, 256), (256, 652), (652, 696), (696, 1700), (1700, 1786), (1786, 3082), (3082, 3121), (3121, 3792), (3792, 5203), (5203, 5650), (5650, 7062), (7062, 9600), (9600, 9640)]\n",
+      "CV indices\n",
+      "(2287, 2288)\n",
+      "(35, 36)\n",
+      "(2987, 2988)\n",
+      "(3528, 3529)\n",
+      "(1966, 1967)\n",
+      "(283, 284)\n",
+      "(2785, 2786)\n",
+      "(2564, 2565)\n",
+      "(3715, 3716)\n",
+      "(2830, 2831)\n",
+      "Test indices\n",
+      "(140, 141)\n",
+      "(214, 215)\n",
+      "(163, 164)\n",
+      "(65, 66)\n",
+      "(59, 60)\n",
+      "(53, 54)\n",
+      "(84, 85)\n",
+      "(57, 58)\n",
+      "(179, 180)\n",
+      "(183, 184)\n",
+      "Test indices\n",
+      "(252, 253)\n",
+      "(245, 246)\n",
+      "(228, 229)\n",
+      "(254, 255)\n",
+      "(224, 225)\n",
+      "(252, 253)\n",
+      "Repeated index\n",
+      "(238, 239)\n",
+      "(250, 251)\n",
+      "(233, 234)\n",
+      "(232, 233)\n",
+      "(255, 256)\n",
+      "Test indices\n",
+      "(274, 275)\n",
+      "(471, 472)\n",
+      "(261, 262)\n",
+      "(396, 397)\n",
+      "(311, 312)\n",
+      "(363, 364)\n",
+      "(496, 497)\n",
+      "(366, 367)\n",
+      "(595, 596)\n",
+      "(607, 608)\n",
+      "Test indices\n",
+      "(658, 659)\n",
+      "(680, 681)\n",
+      "(666, 667)\n",
+      "(674, 675)\n",
+      "(654, 655)\n",
+      "(691, 692)\n",
+      "(695, 696)\n",
+      "(671, 672)\n",
+      "(676, 677)\n",
+      "(655, 656)\n",
+      "Test indices\n",
+      "(973, 974)\n",
+      "(903, 904)\n",
+      "(765, 766)\n",
+      "(1372, 1373)\n",
+      "(987, 988)\n",
+      "(1324, 1325)\n",
+      "(929, 930)\n",
+      "(1060, 1061)\n",
+      "(1467, 1468)\n",
+      "(851, 852)\n",
+      "Test indices\n",
+      "(1706, 1707)\n",
+      "(1783, 1784)\n",
+      "(1755, 1756)\n",
+      "(1726, 1727)\n",
+      "(1712, 1713)\n",
+      "(1750, 1751)\n",
+      "(1762, 1763)\n",
+      "(1785, 1786)\n",
+      "(1757, 1758)\n",
+      "(1745, 1746)\n",
+      "Test indices\n",
+      "(3051, 3052)\n",
+      "(2798, 2799)\n",
+      "(2430, 2431)\n",
+      "(2288, 2289)\n",
+      "(2839, 2840)\n",
+      "(2113, 2114)\n",
+      "(2996, 2997)\n",
+      "(2079, 2080)\n",
+      "(2076, 2077)\n",
+      "(2653, 2654)\n",
+      "Test indices\n",
+      "(3098, 3099)\n",
+      "(3083, 3084)\n",
+      "(3109, 3110)\n",
+      "(3107, 3108)\n",
+      "(3103, 3104)\n",
+      "(3087, 3088)\n",
+      "(3116, 3117)\n",
+      "(3111, 3112)\n",
+      "(3093, 3094)\n",
+      "(3105, 3106)\n",
+      "Test indices\n",
+      "(3134, 3135)\n",
+      "(3551, 3552)\n",
+      "(3215, 3216)\n",
+      "(3132, 3133)\n",
+      "(3745, 3746)\n",
+      "(3497, 3498)\n",
+      "(3353, 3354)\n",
+      "(3670, 3671)\n",
+      "(3137, 3138)\n",
+      "(3299, 3300)\n",
+      "Test indices\n",
+      "(4937, 4938)\n",
+      "(4383, 4384)\n",
+      "(4966, 4967)\n",
+      "(4292, 4293)\n",
+      "(3815, 3816)\n",
+      "(5060, 5061)\n",
+      "(4830, 4831)\n",
+      "(4462, 4463)\n",
+      "(4531, 4532)\n",
+      "(4840, 4841)\n",
+      "Test indices\n",
+      "(5491, 5492)\n",
+      "(5347, 5348)\n",
+      "(5309, 5310)\n",
+      "(5372, 5373)\n",
+      "(5367, 5368)\n",
+      "(5543, 5544)\n",
+      "(5348, 5349)\n",
+      "(5551, 5552)\n",
+      "(5571, 5572)\n",
+      "(5475, 5476)\n",
+      "Test indices\n",
+      "(6993, 6994)\n",
+      "(7005, 7006)\n",
+      "(5717, 5718)\n",
+      "(7029, 7030)\n",
+      "(5919, 5920)\n",
+      "(6106, 6107)\n",
+      "(6951, 6952)\n",
+      "(6751, 6752)\n",
+      "(7003, 7004)\n",
+      "(5959, 5960)\n",
+      "Test indices\n",
+      "(7999, 8000)\n",
+      "(9394, 9395)\n",
+      "(9389, 9390)\n",
+      "(8838, 8839)\n",
+      "(9464, 9465)\n",
+      "(8805, 8806)\n",
+      "(9251, 9252)\n",
+      "(8983, 8984)\n",
+      "(7766, 7767)\n",
+      "(8988, 8989)\n",
+      "Test indices\n",
+      "(9627, 9628)\n",
+      "(9610, 9611)\n",
+      "(9610, 9611)\n",
+      "Repeated index\n",
+      "(9625, 9626)\n",
+      "(9603, 9604)\n",
+      "(9622, 9623)\n",
+      "(9612, 9613)\n",
+      "(9611, 9612)\n",
+      "(9625, 9626)\n",
+      "Repeated index\n",
+      "(9616, 9617)\n",
+      "(9632, 9633)\n",
+      "(9610, 9611)\n",
+      "Repeated index\n",
+      "(9602, 9603)\n",
       "Printing shapes\n",
       "\n",
       "Training data (X, y)\n",
-      "(6468, 6)\n",
-      "(6468, 2)\n",
+      "(5714, 6)\n",
+      "(5714, 2)\n",
       "Cross-Validation data (X, y)\n",
-      "(20, 6)\n",
-      "(20, 2)\n",
-      "No test data is available\n",
+      "(10, 6)\n",
+      "(10, 2)\n",
+      "Testing data (X, y)\n",
+      "(140, 6)\n",
+      "(140, 2)\n",
       "Printing first 5 elements\n",
       "\n",
       "Training data (X, y)\n",
-      "[[0.257854 0.848304 0.651139 0.215251 0.497586 0.698251]\n",
-      " [0.366043 0.847326 0.645708 0.216    0.647302 0.330563]\n",
-      " [0.257854 0.849484 0.645207 0.216297 0.472669 0.80157 ]\n",
-      " [0.659356 0.849365 0.652557 0.214993 0.812263 0.154435]\n",
-      " [0.257854 0.848645 0.647337 0.213231 0.473394 0.793752]]\n",
+      "[[0.659356 0.848508 0.657299 0.215614 0.475933 0.774318]\n",
+      " [0.484302 0.849966 0.6564   0.215004 0.451299 0.873624]\n",
+      " [0.366043 0.849983 0.654372 0.216008 0.607227 0.394744]\n",
+      " [0.732444 0.849773 0.648734 0.218363 0.701158 0.249027]\n",
+      " [0.257854 0.85095  0.646065 0.215431 0.35647  1.      ]]\n",
+      "[[0. 1.]\n",
+      " [0. 1.]\n",
+      " [0. 1.]\n",
+      " [0. 1.]\n",
+      " [0. 1.]]\n",
+      "Cross-Validation data (X, y)\n",
+      "[[0.659356 0.848879 0.656627 0.214602 0.765645 0.182397]\n",
+      " [0.484302 0.853197 0.65742  0.214038 0.466791 0.803767]\n",
+      " [0.366043 0.850102 0.650455 0.216221 0.491471 0.721614]\n",
+      " [0.257854 0.848291 0.647095 0.215773 0.274682 1.      ]\n",
+      " [0.484302 0.849099 0.653698 0.21523  0.465637 0.817023]]\n",
       "[[1. 0.]\n",
       " [1. 0.]\n",
       " [1. 0.]\n",
-      " [0. 1.]\n",
-      " [1. 0.]]\n",
-      "Cross-Validation data (X, y)\n",
-      "[[0.659356 0.848244 0.655006 0.215228 0.821411 0.137224]\n",
-      " [0.257854 0.848291 0.644497 0.214438 0.241916 1.      ]\n",
-      " [0.257854 0.849017 0.655787 0.215109 0.237148 1.      ]\n",
-      " [0.659356 0.848663 0.644061 0.21346  0.715476 0.24065 ]\n",
-      " [0.659356 0.851281 0.647941 0.214982 0.784031 0.168239]]\n",
-      "[[0. 1.]\n",
-      " [1. 0.]\n",
-      " [1. 0.]\n",
       " [1. 0.]\n",
       " [1. 0.]]\n",
-      "No test data is available\n"
+      "Testing data (X, y)\n",
+      "[[0.366043 0.848316 0.644826 0.214242 0.383176 0.998282]\n",
+      " [0.366043 0.851996 0.65078  0.215953 0.380567 1.      ]\n",
+      " [0.659356 0.85013  0.647297 0.21316  0.676208 0.288322]\n",
+      " [0.484302 0.852038 0.651463 0.218279 0.469067 0.806954]\n",
+      " [0.659356 0.845594 0.649596 0.212938 0.68768  0.271812]]\n",
+      "[[1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]]\n"
      ]
     }
    ],
    "source": [
-    "dHandlder_valve.load_data(unroll=True, verbose=1, cross_validation_ratio=0.2, test_ratio = 0)\n",
+    "dHandlder_valve.load_data(unroll=True, verbose=1, cross_validation_ratio=0.1, shuffle_samples=False)\n",
     "dHandlder_valve.print_data(print_top=True)\n",
     "\n",
     "#One hot encoding\n",
